@@ -1,3 +1,6 @@
+- CHG: The "add before commit" option in the settings dialog is
+       gone, this option is now in the commit dialog where it
+       belongs. (Stefan)
 - BUG: Pressing the "Find" button in the merge dialog lead
        to an error message about the path being invalid. (Stefan)
 - BUG: ignore patterns _not_ starting with * weren't correctly
